--- a/nbs/00_spa_oauth.ipynb
+++ b/nbs/00_spa_oauth.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# core\n",
+    "# spa_oauth\n",
     "\n",
     "> Fill in a module description here"
    ]
